# whoop-mcp

./: .env.example  PRIVACY.md  README.md  pyproject.toml
src/whoop_mcp/: __init__.py  api_client.py  cli.py  exceptions.py  models.py  oauth.py  server.py  session.py  settings.py  token_store.py
tests/: conftest.py  test_api_client.py  test_oauth.py  test_settings.py  test_token_store.py
